--- a/project/src/main/resources/templates/manageAccount/changePassword.html
+++ b/project/src/main/resources/templates/manageAccount/changePassword.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 mx-auto">
             <form id="msform">
-                <img src="https://img.icons8.com/clouds/130/000000/password.png"/>
+                <img src="img/img-changePassword.png"/>
                 <h2 class="fs-title">Thay đổi mật khẩu</h2>
                 <h3 class="fs-subtitle">Nên sử dụng những mật khẩu có độ bảo mật cao</h3>
                 <fieldset>
@@ -44,57 +44,23 @@
                         <input type="password" class="form-control" id="confirm-password" required>
                     </div>
                     <div class="error changePassword-err text-left"></div>
-                    <input type="submit" name="confirm" id="confirm" class="form-submit" value="XÁC NHẬN"/>
+                    <input type="submit" name="confirm" id="confirm" class="btn btn-customer" value="XÁC NHẬN"/>
                 </fieldset>
             </form>
         </div>
     </div>
 </div>
-<!--<div class="container">-->
-<!--    <div class="signin-form">-->
-<!--        <div class="login-form-title">-->
-<!--            <img src="https://img.icons8.com/clouds/130/000000/password.png"/>-->
-<!--            <h3 class="form-title">Thay đổi mật khẩu</h3>-->
-<!--            <p class="form-title-description">Nên sử dụng những mật khẩu có độ bảo mật cao</p>-->
-<!--        </div>-->
-<!--        <form method="POST" class="login-form" id="login-form">-->
-<!--            <div class="form-group">-->
-<!--                <div class="form-group-input">-->
-<!--                    <label class="input-text" for="old-password"><i class="fa fa-lock"></i></label>-->
-<!--                    <input type="password" name="old-password" id="old-password" placeholder="Mật khẩu cũ"/>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="form-group">-->
-<!--                <div class="form-group-input">-->
-<!--                    <label class="input-text" for="new-password"><i class="fa fa-lock"></i></label>-->
-<!--                    <input type="password" name="new-password" id="new-password" placeholder="Mật khẩu mới"/>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="form-group">-->
-<!--                <div class="form-group-input">-->
-<!--                    <label class="input-text" for="confirm-password"><i class="fa fa-lock"></i></label>-->
-<!--                    <input type="password" name="confirm-password" id="confirm-password"-->
-<!--                           placeholder="Xác nhận mật khẩu mới"/>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="text-red changePassword-err error"></div>-->
-<!--            <div class="form-group form-button">-->
-<!--                <input type="submit" name="confirm" id="confirm" class="form-submit" value="XÁC NHẬN"/>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
 
 <!--    Modal Change Password Success-->
-<div class="modal" tabindex="-1" role="dialog" id="changePassword">
+<div class="modal fade" tabindex="-1" role="dialog" id="changePassword">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
+                <img class="mb-3 mt-3" src="img/img-success.png"/>
                 <h5>Mật khẩu thay đổi thành công!</h5>
             </div>
             <div class="modal-footer">
-                <a type="button" class="btn btn-primary" th:href="@{login}">ĐÓNG</a>
+                <a class="btn btn-primary" th:href="@{login}">ĐÓNG</a>
             </div>
         </div>
     </div>
