--- a/project/src/main/resources/templates/manageClass/createClass.html
+++ b/project/src/main/resources/templates/manageClass/createClass.html
@@ -67,13 +67,12 @@
     </div>
 </div>
 <!--    Modal Create Success-->
-<div class="modal" tabindex="-1" role="dialog" id="createSuccess">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" id="closeDialog" class="btn btn-primary" value="ĐÓNG"/>
+                <input type="button" data-dismiss="modal" class="btn btn-primary" value="ĐÓNG"/>
             </div>
         </div>
     </div>
