--- a/project/src/main/resources/templates/timetable/timetableClass.html
+++ b/project/src/main/resources/templates/timetable/timetableClass.html
@@ -25,25 +25,26 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Thời khóa biểu của lớp</h2>
-            <div class="search">
-                <div class="col-xl-5 d-inline-block">
-                    <div class="search-line">
-                        <span>Ngày áp dụng</span>
-                        <select class="combobox searchable" id="appyDateList">
+            <h2>THỜI KHÓA BIỂU CỦA LỚP</h2>
+            <div class="search row align-items-end">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Ngày áp dụng:</label>
+                        <select class="combobox form-control w-75" id="appyDateList">
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-1 d-inline-block div-space"></div>
-                <div class="col-xl-4 d-inline-block">
-                    <div class="search-line">
-                        <span>Lớp</span>
-                        <select class="combobox searchable" id="class">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Lớp:</label>
+                        <select class="combobox form-control w-75" id="class">
                         </select>
                     </div>
                 </div>
-                <div class="d-inline-block ml-2">
-                    <button class="btn btn-search" id="search">Tìm kiếm</button>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-right mb-1">
+                        <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
+                    </div>
                 </div>
             </div>
         </div>
