--- a/project/src/main/resources/templates/manageAccount/createAccount.html
+++ b/project/src/main/resources/templates/manageAccount/createAccount.html
@@ -90,13 +90,10 @@
 </div>
 
 <!--    Modal Create Success-->
-<div class="modal" tabindex="-1" role="dialog" id="createSuccess">
+<div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
-                <h5>Tạo tài khoản thành công!</h5>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
                 <a type="button" class="btn btn-primary" th:href="@{createAccount}">ĐÓNG</a>
             </div>
