--- a/project/src/main/resources/templates/manageAccount/forgotPassword.html
+++ b/project/src/main/resources/templates/manageAccount/forgotPassword.html
@@ -26,9 +26,8 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 mx-auto">
             <form id="msform">
-                <img src="https://img.icons8.com/bubbles/130/000000/man-window-lock.png"/>
+                <img src="img/img-forgotPassword.png"/>
                 <h2 class="fs-title">Quên mật khẩu</h2>
-<!--                <h3 class="fs-subtitle">Nên sử dụng những mật khẩu có độ bảo mật cao</h3>-->
                 <fieldset>
                     <p>Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật khẩu.</p>
                     <h5 class="form-title">Hotline: 02183 855 550</h5>
@@ -37,18 +36,6 @@
         </div>
     </div>
 </div>
-
-<!--<div class="container">-->
-<!--    <div class="signin-form">-->
-<!--        <div class="login-form-title">-->
-<!--            <img src="https://img.icons8.com/bubbles/130/000000/man-window-lock.png"/>-->
-<!--            <h3 class="form-title">Quên mật khẩu</h3>-->
-<!--            <p class="form-title-description">Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật-->
-<!--                khẩu.</p>-->
-<!--            <h5 class="form-title">Hotline: 02183 855 550</h5>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
