--- a/project/src/main/resources/templates/manageAccount/login.html
+++ b/project/src/main/resources/templates/manageAccount/login.html
@@ -22,12 +22,11 @@
 
 <body>
 <div th:replace="fragments/header :: header"></div>
-
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3 mx-auto">
             <form id="msform">
-                <img src="https://img.icons8.com/clouds/130/000000/school.png"/>
+                <img src="img/img-login.png"/>
                 <h2 class="fs-title">Đăng nhập</h2>
                 <h3 class="fs-subtitle">Vui lòng điền vào các trường sau để đăng nhập</h3>
                 <fieldset>
@@ -41,7 +40,7 @@
                         <input type="password" class="form-control" id="password" required>
                     </div>
                     <div class="error login-err text-left"></div>
-                    <input type="button" name="signin" id="signin" class="form-submit" data-toggle="modal"
+                    <input type="button" name="signin" id="signin" class="btn btn-customer" data-toggle="modal"
                            value="ĐĂNG NHẬP"/>
                 </fieldset>
             </form>
