--- a/project/src/main/resources/templates/timetable/timetableTeacher.html
+++ b/project/src/main/resources/templates/timetable/timetableTeacher.html
@@ -13,7 +13,7 @@
     <script th:src="@{/js/public/popper.min.js}"></script>
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Select2-->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
     <script th:src="@{/js/public/select2.min.js}"></script>
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
@@ -25,25 +25,26 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Thời khóa biểu của giáo viên</h2>
-            <div class="search">
-                <div class="col-xl-5 d-inline-block">
-                    <div class="search-line">
-                        <span>Ngày áp dụng</span>
-                        <select class="combobox searchable" id="appyDateList">
+            <h2>THỜI KHÓA BIỂU CỦA GIÁO VIÊN</h2>
+            <div class="search row align-items-end">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Ngày áp dụng:</label>
+                        <select class="combobox form-control w-75" id="appyDateList">
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-1 d-inline-block div-space"></div>
-                <div class="col-xl-4 d-inline-block">
-                    <div class="search-line">
-                        <span>Giáo viên</span>
-                        <select id="teacher" class="combobox searchable">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Giáo viên:</label>
+                        <select class="combobox form-control w-75" id="teacher">
                         </select>
                     </div>
                 </div>
-                <div class="d-inline-block ml-2">
-                    <button class="btn btn-search" id="search">Tìm kiếm</button>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-right mb-1">
+                        <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
+                    </div>
                 </div>
             </div>
         </div>
