--- a/project/src/main/resources/templates/manageAccount/createAccount.html
+++ b/project/src/main/resources/templates/manageAccount/createAccount.html
@@ -95,6 +95,7 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
+                <a type="button" class="btn btn-danger" th:href="@{manageAccount}">DANH SÁCH TÀI KHOẢN</a>
                 <a type="button" class="btn btn-primary" th:href="@{createAccount}">ĐÓNG</a>
             </div>
         </div>
