--- a/project/src/main/resources/templates/manageClass/createClass.html
+++ b/project/src/main/resources/templates/manageClass/createClass.html
@@ -72,7 +72,8 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" data-dismiss="modal" class="btn btn-primary" value="ĐÓNG"/>
+                <a th:href="@{manageClass}" class="btn btn-danger">DANH SÁCH LỚP</a>
+                <a th:href="@{createClass}" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
