--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -63,7 +63,7 @@
         </div>
         <div class="table-title-2 pt-0">
             <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
-                <a href="#addAssign" class="btn btn-success" data-toggle="modal">
+                <a href="#addAssign" class="btn btn-success manageBtn" data-toggle="modal">
                     <span>Tạo phân công</span>
                 </a>
                 <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
@@ -136,7 +136,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
+                <img class="mb-3 mt-3" src="img/img-success.png"/>
                 <h5 id="message-reset">Phân công thành công!</h5>
             </div>
             <div class="modal-footer">
