--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -45,7 +45,9 @@
             </div>
         </div>
         <div class="panel panel-default"></div>
+
         <div class="saveResult text-right">
+            <div class="text-red font-500 gradingToEmulation-err mt-4 d-inline-block"></div>
             <input type="button" class="btn btn-customer my-3" data-toggle="modal" id="saveGrading" value="LƯU"/>
         </div>
     </div>
