--- a/project/src/main/resources/templates/manageTeacher/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/manageTeacher.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 manageBtn">
             <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
                 <input type="button" class="btn btn-success mx-2" data-toggle="modal" onclick="checkTeacher()"
                        value="Xóa"/>
