--- a/project/src/main/resources/templates/manageViolation/violationList.html
+++ b/project/src/main/resources/templates/manageViolation/violationList.html
@@ -26,9 +26,9 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Danh sách lỗi vi phạm</h2>
+            <h2>DANH SÁCH LỖI VI PHẠM</h2>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 manageBtn">
             <div class="col-sm-12 d-flex justify-content-end align-items-center">
                 <a th:href="@{addViolationType}" class="btn btn-success">
                     <span>Thêm nội quy</span>
