--- a/project/src/main/resources/templates/schoolYear/addSchoolYear.html
+++ b/project/src/main/resources/templates/schoolYear/addSchoolYear.html
@@ -52,14 +52,16 @@
         </div>
     </div>
 </div>
+
 <!--    Modal Create Success-->
-<div class="modal" tabindex="-1" role="dialog" id="createSuccess">
+<div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <input type="button" data-dismiss="modal" class="btn btn-primary" value="ĐÓNG"/>
+                <a href="schoolYearList" class="btn btn-danger">DANH SÁCH NĂM HỌC</a>
+                <a href="addSchoolYear" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
