--- a/project/src/main/resources/templates/manageAccount/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount/manageAccount.html
@@ -30,18 +30,18 @@
                         <input type="text" class="form-control w-75" placeholder="Tên đăng nhập">
                     </div>
                     <div class="form-group text-left mb-1">
-                        <label>Chức vụ:</label>
-                        <select class="combobox form-control w-75" id="role-name">
-                            <option value="" selected="selected">Tất cả</option>
+                        <label>Sắp xếp theo:</label>
+                        <select class="combobox form-control w-75" id="orderBY">
+                            <option value="0" selected="selected">Tên đăng nhập</option>
+                            <option value="1">Họ và tên</option>
                         </select>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group text-left mb-1">
-                        <label>Sắp xếp theo:</label>
-                        <select class="combobox form-control w-75" id="orderBY">
-                            <option value="0" selected="selected">Tên đăng nhập</option>
-                            <option value="1">Họ và tên</option>
+                        <label>Chức vụ:</label>
+                        <select class="combobox form-control w-75" id="role-name">
+                            <option value="" selected="selected">Tất cả</option>
                         </select>
                     </div>
                     <div class="form-group text-left mb-1">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 manageBtn">
             <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
                 <input type="button" class="btn btn-success mx-2" data-toggle="modal" onclick="checkResetPassword()"
                        value="Đặt lại MK"/>
@@ -99,14 +99,12 @@
 <div id="deleteAccountModal" class="modal fade">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <form>
-                <div class="modal-body text-center"></div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-danger" data-toggle="modal" id="deleteAccount"
-                           data-dismiss="modal" value="CÓ">
-                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
-                </div>
-            </form>
+            <div class="modal-body text-center"></div>
+            <div class="modal-footer">
+                <input type="button" class="btn btn-danger" data-toggle="modal" id="deleteAccount"
+                       data-dismiss="modal" value="CÓ">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
+            </div>
         </div>
     </div>
 </div>
@@ -127,18 +125,16 @@
 <div id="resetPasswordModal" class="modal fade">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <form>
-                <div class="modal-header">
-                    <h4 class="modal-title">Đặt lại mật khẩu</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body text-center"></div>
-                <div class="modal-footer">
-                    <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#resetSuccess"
-                           id="resetPassword" data-dismiss="modal" value="XÁC NHẬN">
-                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
-                </div>
-            </form>
+            <div class="modal-header">
+                <h4 class="modal-title">Đặt lại mật khẩu</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body text-center"></div>
+            <div class="modal-footer">
+                <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#resetSuccess"
+                       id="resetPassword" data-dismiss="modal" value="XÁC NHẬN">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
+            </div>
         </div>
     </div>
 </div>
@@ -149,7 +145,7 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                <a href="manageAccount" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
