--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -27,7 +27,7 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Danh sách lỗi theo ngày</h2>
+            <h2>DANH SÁCH LỖI THEO NGÀY</h2>
             <div class="search row align-items-baseline">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group text-left mb-1">
@@ -45,7 +45,7 @@
         </div>
         <div class="table-title-2 pt-0">
             <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
-                <a th:href="@{addNewViolation}" class="btn btn-success">
+                <a th:href="@{gradingToEmulation}" class="btn btn-success manageBtn">
                     <span>Thêm vi phạm mới</span>
                 </a>
                 <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
