--- a/project/src/main/resources/templates/manageTeacher/createTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/createTeacher.html
@@ -52,12 +52,14 @@
         </div>
     </div>
 </div>
+
 <!--    Modal Create Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
+                <a type="button" class="btn btn-danger" th:href="@{manageTeacher}">DANH SÁCH GIÁO VIÊN</a>
                 <a type="button" class="btn btn-primary" th:href="@{createTeacher}">ĐÓNG</a>
             </div>
         </div>
