--- a/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
+++ b/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
@@ -23,9 +23,9 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Thời gian thực thi chấm điểm</h2>
+            <h2>THỜI GIAN THỰC THI CHẤM ĐIỂM</h2>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 manageBtn">
             <div class="col-sm-12 d-flex justify-content-end align-items-center">
                 <a href="#deleteModal" class="btn btn-success" data-toggle="modal" onclick="checkSelect()">
                     <span>Xóa</span>
