--- a/project/src/main/resources/templates/schoolYear/schoolYearList.html
+++ b/project/src/main/resources/templates/schoolYear/schoolYearList.html
@@ -26,9 +26,9 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Danh sách năm học</h2>
+            <h2>DANH SÁCH NĂM HỌC</h2>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 manageBtn">
             <div class="col-sm-12 d-flex justify-content-end align-items-center">
                 <a th:href="@{addSchoolYear}" class="btn btn-success">
                     <span>Thêm năm học</span>
@@ -72,8 +72,7 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
                 <a type="button" class="btn btn-primary" th:href="@{schoolYearList}">ĐÓNG</a>
             </div>
@@ -81,6 +80,7 @@
     </div>
 </div>
 <div class="modal-loading"></div>
+
 <div th:replace="fragments/footer :: footer"></div>
 <script type="text/javascript" th:src="@{/js/schoolYear/schoolYearList.js}"></script>
 </body>
