--- a/project/src/main/resources/templates/timetable/manageTimetable.html
+++ b/project/src/main/resources/templates/timetable/manageTimetable.html
@@ -13,8 +13,8 @@
     <script th:src="@{/js/public/popper.min.js}"></script>
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+    <script th:src="@{/js/public/moment.min.js}"></script>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
@@ -73,6 +73,7 @@
         </div>
     </div>
 </div>
+
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
 </body>
