--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -31,17 +31,17 @@ a:hover {
 /*    display: none;*/
 /*}*/
 
-/*!* Chrome, Safari, Edge, Opera *!*/
-/*input::-webkit-outer-spin-button,*/
-/*input::-webkit-inner-spin-button {*/
-/*    -webkit-appearance: none;*/
-/*    margin: 0;*/
-/*}*/
+/* Chrome, Safari, Edge, Opera */
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
-/*!* Firefox *!*/
-/*input[type=number] {*/
-/*    -moz-appearance: textfield;*/
-/*}*/
+/* Firefox */
+.quantity-input {
+    -moz-appearance: textfield;
+}
 
 /*Header*/
 
