--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -14,8 +14,7 @@
     <script th:src="@{/js/public/popper.min.js}"></script>
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
@@ -152,7 +151,6 @@
                                         <li><a th:href="@{assignEmulation}">Xem phân công trực tuần</a></li>
                                         <li><a th:href="@{gradingToEmulation}">Chấm điểm thi đua</a></li>
                                         <li><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></li>
-                                        <li><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></li>
                                         <li><a th:href="@{viewRequest}">Xem yêu cầu thay đổi</a></li>
                                         <li><a th:href="@{history}">Xem lịch sử</a></li>
                                     </ul>
