--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -65,7 +65,7 @@
             </div>
             <div class="modal-body"></div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-danger" data-toggle="modal"
+                <input type="button" class="btn btn-danger editModalBtn" data-toggle="modal"
                        id="editModalBtn" data-dismiss="modal" value="">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="HỦY">
             </div>
