--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -70,7 +70,8 @@
                             <a class="dropdown-item" th:href="@{assignEmulation}">Xem phân công trực tuần</a>
                             <a class="dropdown-item" th:href="@{gradingToEmulation}">Chấm điểm thi đua</a>
                             <a class="dropdown-item" th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a>
-                            <a class="dropdown-item" th:href="@{addNewViolation}">Thêm vi phạm mới</a>
+                            <a class="dropdown-item" th:href="@{viewRequest}">Xem yêu cầu thay đổi</a>
+                            <a class="dropdown-item" th:href="@{history}">Xem lịch sử</a>
                         </div>
                     </li>
 
