--- a/project/src/main/resources/templates/manageEmulation/viewRequest.html
+++ b/project/src/main/resources/templates/manageEmulation/viewRequest.html
@@ -78,8 +78,8 @@
     </div>
 </div>
 
-<!--    Modal Pass Success-->
-<div class="modal fade" tabindex="-1" role="dialog" id="passSuccess">
+<!--    Modal Success-->
+<div class="modal fade" tabindex="-1" role="dialog" id="modalSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
@@ -90,17 +90,6 @@
     </div>
 </div>
 
-<!--    Modal Reject Success-->
-<div class="modal fade" tabindex="-1" role="dialog" id="rejectSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-body text-center"></div>
-            <div class="modal-footer">
-                <input type="button" class="btn btn-primary btn-reload" data-dismiss="modal" value="ĐÓNG"/>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div class="modal-loading"></div>
 <div th:replace="fragments/footer :: footer"></div>
