--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -73,6 +73,41 @@
     </div>
 </div>
 
+<!-- History Modal HTML -->
+<div id="historyModal" class="modal fade">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Lịch sử chỉnh sửa</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+                <ul>
+                    <li><span class="font-500">21/07/2020 - user1.</span>
+                        <ol>Lý do: dfghdfgh.</ol>
+                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
+                    </li>
+                </ul>
+                <ul>
+                    <li><span class="font-500">21/07/2020 - user1.</span>
+                        <ol>Lý do: dfghdfgh.</ol>
+                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
+                    </li>
+                </ul>
+                <ul>
+                    <li><span class="font-500">21/07/2020 - user1.</span>
+                        <ol>Lý do: dfghdfgh.</ol>
+                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
+                    </li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--    Modal Confirm Edit-->
 <div class="modal fade" tabindex="-1" role="dialog" id="confirmEdit">
     <div class="modal-dialog modal-dialog-centered" role="document">
